--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,18 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cryptography==41.0.5
+Deprecated==1.2.14
 dnspython==2.4.2
 fastapi==0.104.1
 frozenlist==1.4.0
 h11==0.14.0
 httptools==0.6.1
 idna==3.4
+importlib-resources==6.1.1
+limits==3.6.0
 motor==3.3.2
 multidict==6.0.4
+packaging==23.2
 pycares==4.4.0
 pycparser==2.21
 pydantic==2.5.1
@@ -27,10 +31,13 @@ pydantic_core==2.14.3
 pymongo==4.6.0
 python-dotenv==1.0.0
 PyYAML==6.0.1
+redis==4.6.0
+slowapi==0.1.8
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.8.0
 uvicorn==0.24.0.post1
 watchfiles==0.21.0
 websockets==12.0
+wrapt==1.16.0
 yarl==1.9.2
