--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -10,7 +10,7 @@ COPY requirements.txt /code/requirements.txt
 
 RUN pip install --no-cache-dir -r /code/requirements.txt
 
-COPY . /code
+COPY .. /code
 
 EXPOSE 6420
 
