--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,12 @@ jobs:
           ALLOWED_DOMAINS: ${{ secrets.ALLOWED_DOMAINS }}
         run: |
           cd backend/
-          docker build --build-arg MONGO_DB_NAME=$MONGO_DB_NAME --build-arg MONGO_URI=$MONGO_URI --build-arg GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID --build-arg GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET --build-arg ENCRYPTION_KEY=$ENCRYPTION_KEY --build-arg ALLOWED_DOMAINS=$ALLOWED_DOMAINS -t google-oauth-firebase:latest .
+          docker buildx build \
+            --build-arg MONGO_DB_NAME=$MONGO_DB_NAME \
+            --build-arg MONGO_URI=$MONGO_URI \
+            --build-arg GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID \
+            --build-arg GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET \
+            --build-arg ENCRYPTION_KEY=$ENCRYPTION_KEY \
+            --build-arg ALLOWED_DOMAINS=$ALLOWED_DOMAINS \
+            -t google-oauth-firebase:latest \
+            .
