--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -31,7 +31,7 @@ COPY requirements.txt /code/requirements.txt
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-COPY ../backend /code
+COPY ./backend /code
 
 EXPOSE 8593
 
