--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,21 @@
-#name: Build FastAPI
-#
-#on:
-#  push
-#
-#jobs:
-#  build:
-#    if: "!contains(github.event.head_commit.message, '[CI Skip]')"
-#    runs-on: self-hosted
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#
-#      - name: Build Docker image
-#        run: |
-#          cd backend/
+name: Build FastAPI
+
+on:
+  push
+
+jobs:
+  build:
+    if: "!contains(github.event.head_commit.message, '[CI Skip]')"
+    runs-on: self-hosted
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Build Docker image
+        run: |
+          cd backend/
+          docker build -t google-oauth:latest .
 #          docker build \
 #          --build-arg MONGO_DB_NAME=$MONGO_DB_NAME \
 #          --build-arg MONGO_URI=$MONGO_URI \
@@ -23,10 +24,10 @@
 #          --build-arg ENCRYPTION_KEY=$ENCRYPTION_KEY \
 #          --build-arg ALLOWED_DOMAINS=$ALLOWED_DOMAINS \
 #          -t google-oauth:latest .
-#        env:
-#          MONGO_DB_NAME: ${{ secrets.MONGO_DB_NAME }}
-#          MONGO_URI: ${{ secrets.MONGO_URI }}
-#          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-#          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-#          ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
-#          ALLOWED_DOMAINS: ${{ secrets.ALLOWED_DOMAINS }}
+        env:
+          MONGO_DB_NAME: ${{ secrets.MONGO_DB_NAME }}
+          MONGO_URI: ${{ secrets.MONGO_URI }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
+          ALLOWED_DOMAINS: ${{ secrets.ALLOWED_DOMAINS }}
