--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,15 +15,14 @@ jobs:
       - name: Build Docker image
         run: |
           cd backend/
-          docker build -t google-oauth:latest --build-arg MONGO_DB_NAME=$MONGO_DB_NAME --build-arg MONGO_URI=$MONGO_URI --build-arg GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID --build-arg GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET --build-arg ENCRYPTION_KEY=$ENCRYPTION_KEY --build-arg ALLOWED_DOMAINS=$ALLOWED_DOMAINS .
-#          docker build \
-#          --build-arg MONGO_DB_NAME=$MONGO_DB_NAME \
-#          --build-arg MONGO_URI=$MONGO_URI \
-#          --build-arg GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID \
-#          --build-arg GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET \
-#          --build-arg ENCRYPTION_KEY=$ENCRYPTION_KEY \
-#          --build-arg ALLOWED_DOMAINS=$ALLOWED_DOMAINS \
-#          -t google-oauth:latest .
+          docker build \
+          --build-arg MONGO_DB_NAME="${{ secrets.MONGO_DB_NAME }}" \
+          --build-arg MONGO_URI="${{ secrets.MONGO_URI }}" \
+          --build-arg GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" \
+          --build-arg GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}" \
+          --build-arg ENCRYPTION_KEY="${{ secrets.ENCRYPTION_KEY }}" \
+          --build-arg ALLOWED_DOMAINS="${{ secrets.ALLOWED_DOMAINS }}" \
+          -t google-oauth:latest .
         env:
           MONGO_DB_NAME: ${{ secrets.MONGO_DB_NAME }}
           MONGO_URI: ${{ secrets.MONGO_URI }}
